--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -136,10 +136,34 @@
           <ion-label>People</ion-label>
         </ion-item>
       </ion-col>
+      <ion-col *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')">
+        <ion-item (click)="clickManageMenu('programs', null)" [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}">
+          <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+          <ion-label>Programs</ion-label>
+        </ion-item>
+      </ion-col>
       <ion-col>
         <ion-item (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" [ngClass]="{ 'selected': (selectedMenuOption === 'plans')}">
           <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
           <ion-label>Plans</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))">
+        <ion-item (click)="clickManageMenu('journey', null)" [ngClass]="{ 'bold-font': (selectedMenuOption === 'journey')}">
+            <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+            <ion-label>Journey</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))">
+        <ion-item (click)="clickManageMenu('mentoring', null)" [ngClass]="{ 'bold-font': (selectedMenuOption === 'mentoring')}">
+          <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+          <ion-label>Mentoring</ion-label>
+        </ion-item>
+      </ion-col>
+      <ion-col *ngIf="moment && moment.categories && (moment.categories.includes('5c915324e172e4e64590e346') || moment.categories.includes('5c915475e172e4e64590e348'))">
+        <ion-item (click)="clickManageMenu('groups', null)" [ngClass]="{ 'bold-font': (selectedMenuOption === 'groups')}">
+          <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
+          <ion-label>Groups</ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
