--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -114,35 +114,35 @@
   </ion-grid>
 </ion-content> -->
 
-<ion-header *ngIf="resource && resource._id && moment.resource && moment.resource.field">
-  <ion-slides [options]="{slidesPerView: 4, grabCursor: true, updateOnWindowResize: true}">
-    <ion-slide>
-      <ion-item (click)="clickManageMenu('insight', null)" [ngClass]="{ 'selected': (selectedMenuOption === 'insight')}">
+<ion-header *ngIf="resource && resource._id && moment.resource && moment.resource.field" no-border>
+  <ion-slides [options]="{slidesPerView: 6, grabCursor: true, updateOnWindowResize: true}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'insight')}">
+      <ion-item (click)="clickManageMenu('insight', null)">
         <ion-icon slot="start" name="person" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Insight</ion-label>
       </ion-item>
     </ion-slide>
-    <ion-slide>
-      <ion-item (click)="clickManageMenu('profile', null)" [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}">
+      <ion-item (click)="clickManageMenu('profile', null)">
         <ion-icon slot="start" name="clipboard" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label *ngIf="moment && moment.categories && !moment.categories.includes('5c915476e172e4e64590e349')">Profile</ion-label>
         <ion-label [ngClass]="{ 'selected': (selectedMenuOption === 'profile')}" *ngIf="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">Plan</ion-label>
       </ion-item>
     </ion-slide>
-    <ion-slide>
-      <ion-item (click)="clickManageMenu('people', null)" [ngClass]="{ 'selected': (selectedMenuOption === 'people')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'people')}">
+      <ion-item (click)="clickManageMenu('people', null)">
         <ion-icon slot="start" name="people" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>People</ion-label>
       </ion-item>
     </ion-slide>
-    <ion-slide *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')">
-      <ion-item (click)="clickManageMenu('programs', null)" [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}">
+    <ion-slide *ngIf="moment && moment.categories && moment.categories.includes('5c915324e172e4e64590e346')"  [ngClass]="{ 'selected': (selectedMenuOption === 'programs')}">
+      <ion-item (click)="clickManageMenu('programs', null)">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Programs</ion-label>
       </ion-item>
     </ion-slide>
-    <ion-slide>
-      <ion-item (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')" [ngClass]="{ 'selected': (selectedMenuOption === 'plans')}">
+    <ion-slide [ngClass]="{ 'selected': (selectedMenuOption === 'plans')}">
+      <ion-item (click)="clickManageMenu('plans', null)" [hidden]="moment && moment.categories && moment.categories.includes('5c915476e172e4e64590e349')">
         <ion-icon slot="start" name="book" *ngIf="platform.width() < 768"></ion-icon>
         <ion-label>Plans</ion-label>
       </ion-item>
