--- a/src/app/pages/feature/manage/managefeature.page.scss
+++ b/src/app/pages/feature/manage/managefeature.page.scss
@@ -29,24 +29,20 @@ app-managefeature {
     --background: transparent !important;
   }
 
-  .slides-md {
-    padding: 0 30px !important;
-  }
-
   ion-slide {
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     padding: 10px;
-    margin: 15px 0;
+    margin: 15px;
     border-radius: 10px;
   }
 
   .selected {
-    background-color: #e2666a !important;
+    background-color: red !important;
   }
 
   .selected * {
     color: white;
-    background-color: #e2666a !important;
+    background-color: red !important;
   }
 
   ion-router-outlet {
@@ -60,9 +56,5 @@ app-managefeature {
 
   .bold-font {
     font-weight: bold;
-  }
-
-  .selected {
-    --ion-background-color: red !important;
   }
 }
