--- a/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
+++ b/src/app/pages/connect/showrecipientinfo/showrecipientinfo.page.scss
@@ -26,7 +26,7 @@ app-showrecipientinfo {
     height: 150px;
     overflow: hidden;
     border-radius: 50%;
-    margin: 12px auto;
+    margin: 12px auto 0;
   }
 
   img {
