--- a/src/app/pages/feature/manage/managefeature.page.html
+++ b/src/app/pages/feature/manage/managefeature.page.html
@@ -151,7 +151,7 @@
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment.resource && moment.resource.field" forceOverscroll="false">
-  <ion-router-outlet style="transform: translateY(20px);"></ion-router-outlet>
+  <ion-router-outlet></ion-router-outlet>
 </ion-content>
 -->
 
