working on combining lists and keeping participants status so that it can all be rendered correctly

--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -20,7 +20,21 @@
     </ion-row>
   </ion-grid>
   <div>
-    <ion-item lines="none">
+    <ion-list>
+      <ion-item>
+        <ion-label>
+          Test
+        </ion-label>
+      </ion-item>
+    </ion-list>
+
+
+
+
+
+
+
+    <!-- <ion-item lines="none">
       <ion-label>{{participantsLabel}}</ion-label>
     </ion-item>
     <ion-grid *ngIf="moment._id" class="user-list-preview">
@@ -31,7 +45,7 @@
               <ion-avatar class="participant-avatar" slot="start">
                 <img src="assets/img/avatar-default.jpg"/>
               </ion-avatar>
-              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{participantLabel}}</ion-label> <!--Add Participant-->
+              <ion-label class="participant-label ion-text-center">{{resource['en-US'].value[31]}} {{participantLabel}}</ion-label> Add Participant
             </div>
           </ion-item>
         </ion-col>
@@ -106,6 +120,6 @@
           </ion-item>
         </ion-col>
       </ion-row>
-    </ion-grid>
+    </ion-grid> -->
   </div>
 </ion-content>
