--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -20,20 +20,25 @@
     </ion-row>
   </ion-grid>
   <div>
-    <ion-content *ngIf="uniqueParticipantList">
       <ion-list>
+        <ion-item>
+          <ion-label color="light" slot="start">
+            <h3>Current Participants</h3>
+          </ion-label>
+          <ion-label color='light' slot='start'>
+            <h3>Role</h3>
+          </ion-label>
+        </ion-item>
         <ion-item *ngFor="let user of uniqueParticipantList; index as j">
-          <div class="participant-centered">
             <ion-avatar class="participant-avatar" slot="start">
               <ion-img *ngIf="user.avatar" [src]="user.avatar"></ion-img>
               <ion-img *ngIf="!user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
             </ion-avatar>
-            <ion-icon class="participant-joined" color="danger" name="remove-circle" (click)="removeParticipant($event, 'participant', j)"></ion-icon>
-            <ion-label color="light" class="participant-label ion-text-center">{{user.first_name}} {{user.last_name}}</ion-label>
-          </div>
+            <ion-label color="light" slot="start" >{{user.first_name}} {{user.last_name}}</ion-label>
+            <ion-label color="light" slot="start" >{{user.role}}</ion-label>
+            <ion-button slot="end">Chat</ion-button>
         </ion-item>
       </ion-list>
-    </ion-content>
 
 
 
